# cyberdelia-ex

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  render.yaml  requirements.txt  ruff.toml  server.py  webui.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: accounts.json  accounts.json.example  rooms.json
game/: commands.py  player.py  races_classes.py  world.py
networking/: server.py
web/templates/: admin.html  choose_race_class.html  index.html  login.html  register.html  reset_password.html
